@@ -1,3 +1,8 @@
+2005-05-31  Aidas Kasparas  <a.kasparas@gmc.lt>
+
+	* src/racoon/ipsec_doi.c: Inserted missing 0th element of
+	  rm_idtype2doi array. Bug #1199700 fix.
+
 2005-05-20  Emmanuel Dreyfus  <manu@netbsd.org>
 
 	From Mike Robinson <sundialservices@users.sourceforge.net>
